kustomize-study/components/db/db-ui/mongo-express/mongo-express-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: mongo-express
  template:
    metadata:
      labels:
        component: mongo-express
    spec:
      containers:
      - name: mongo-express
        image: mongo-express
        ports:
        - containerPort: 8081
